--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</div>
 			<div class="text-container flex-center">
 				Hola soy Yanela<br/>
-				Este es mi catálogo<br/>
+				Este es mi cat&aacute;logo<br/>
 			</div>
 		</div>
 		
