testing image og protocol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
         <title>Labios Rojos</title>
 
-        <meta property="og:image" content="https://yasmanmesa.github.io/images/site_image.png" />
+        <meta property="og:image" content="http://yasmanmesa.github.io/images/site_image.png" />
         <meta property="og:site_name" content="Labios Rojos" />
         <meta property="og:type" content="object" />
         <meta property="og:title" content="Labios Rojos" />
