Modified to display crytocurrency dealers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web App Creator</title>
+    <title>Cripto en Cuba</title>
 
     <script src="jquery-3.4.1.min.js"></script>
 
@@ -11,47 +11,27 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-    <!--<link rel="stylesheet" href="extLibs/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-    <!--<script src="extLibs/http_stackpath.bootstrapcdn.com_bootstrap_4.3.1_js_bootstrap.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
-    <!--<script src="extLibs/http_code.jquery.com_jquery-3.3.1.slim.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <!--<script src="extLibs/http_cdnjs.cloudflare.com_ajax_libs_popper.js_1.14.7_umd_popper.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-
 </head>
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Web App Creator</h1>
+    <h1>Cubanos que aceptan criptomonedas</h1>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <h3>Dialog with title, message and view</h3>
-            <button id="sample-1" type="button" class="btn btn-primary">Sample 1</button>
+            <h3>Fulano Perez</h3>
         </div>
         <div class="col-sm-4">
-            <h3>Dialog with items</h3>
-            <button id="sample-2" type="button" class="btn btn-primary">Sample 2</button>
+            <h3>Electricista</h3>
         </div>
         <div class="col-sm-4">
-            <h3>Toast</h3>
-
-
-            <form>
-                <div class="form-group">
-                    <label for="activityInput">Activity name</label>
-                    <input type="text" class="form-control" id="activityInput" placeholder="Enter activity name" value="MainActivity">
-                </div>
-                <div class="form-group">
-                    <label for="buttonIdInput">Button id</label>
-                    <input type="text" class="form-control" id="buttonIdInput" placeholder="Enter button id" value="buttonShowPopUp">
-                </div>
-                <div class="form-group">
-                    <label for="messageInput">Message</label>
-                    <input type="text" class="form-control" id="messageInput" placeholder="Enter message" value="Yasman Mesa Hernandez">
-                </div>
-                <button id="sample-3" type="button" class="btn btn-primary">Sample 3</button>
-            </form>
+            <p>BTC - ETH - USDC</p>
+            <a href="tel:+53535353">+53535353</a>
+            <br/>
+            <a href="mailto:fulano@gmail.com">fulano@gmail.com</a>
+            <p>Guantanamo - Maisi</p>
         </div>
     </div>
 </div>
@@ -59,10 +39,6 @@
 <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-database.js"></script>
-
-<!--<script src="extLibs/http_www.gstatic.com_firebasejs_5.10.1_firebase-app.js"></script>-->
-<!--<script src="extLibs/http_www.gstatic.com_firebasejs_5.10.1_firebase-auth.js"></script>-->
-<!--<script src="extLibs/http_www.gstatic.com_firebasejs_5.10.1_firebase-database.js"></script>-->
 
 <script defer src="./init-firebase.js"></script>
 <script defer src="./functions.js"></script>
